5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1575_1333.log
== TEST (2019-03-28 11:47:04) 
-- CODE:
expressao = 30 – (3 ** 2) + 8 // 3 ** (2 * 10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – (3 ** 2) + 8 // 3 ** (2 * 10)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:55:14) 
-- CODE:
expressao = 30 – 3 ** 2 + (8 // 3 ** (2 * 10))
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + (8 // 3 ** (2 * 10))
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:55:24) 
-- CODE:
expressao = (30 – 3 ** 2 + (8 // 3 ** (2 * 10))
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30 – 3 ** 2 + (8 // 3 ** (2 * 10))
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:55:38) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** (2 * 10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** (2 * 10)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:55:46) 
-- CODE:
expressao = 30 – 3 ** 2 + (8 // 3 ** (2 * 10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + (8 // 3 ** (2 * 10)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:57:15) 
-- CODE:
expressao = 30 – 3 ** 2 + (8 // 3) ** (2 * 10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + (8 // 3) ** (2 * 10)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:57:38) 
-- CODE:
expressao = 30 – 3 ** 2 + (8 // 3 ** (2 * 10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + (8 // 3 ** (2 * 10)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:58:20) 
-- CODE:
expressao = 30 – 3 ** 2 + (8 // (3 ** 2 * 10))
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + (8 // (3 ** 2 * 10))
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:58:28) 
-- CODE:
expressao = 30 – 3 ** 2 + (8 // (3 ** 2 * 10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + (8 // (3 ** 2 * 10)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:58:49) 
-- CODE:
expressao = 30 – 3 ** 2 + (8 // ( 3 ** 2 * 10))
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + (8 // ( 3 ** 2 * 10))
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:59:04) 
-- CODE:
expressao = 30 – 3 ** 2 + (8 // (3** 2 * 10))
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + (8 // (3** 2 * 10))
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:59:15) 
-- CODE:
expressao = 30 – 3 ** 2 + (8 // (3**2 * 10))
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + (8 // (3**2 * 10))
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:59:40) 
-- CODE:
expressao = 30 – 3**2 + (8 // (3**2 * 10))
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3**2 + (8 // (3**2 * 10))
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:00:20) 
-- CODE:
expressao = 30 - 3**2 + (8 // (3**2 * 10))
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:00:32) 
-- CODE:
expressao = 30 - 3**2 + (8 // (3**2 * 10))
print(expressao)
-- EXECUTION TIME:
0.131182
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
